# TheWave32

./: .gitignore  LICENSE  README.md  pyproject.toml  run-gui.sh
docs/: hardware.md  new_module.md
firmware/ble-airtag-finder/: CMakeLists.txt  sdkconfig.defaults
firmware/ble-hid-keyboard/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/ble-scanner/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/ble-spam/: CMakeLists.txt  sdkconfig.defaults
firmware/cmake/: net80211_patch.cmake
firmware/espnow-bridge/: CMakeLists.txt  sdkconfig.defaults
firmware/net-port-scanner/: CMakeLists.txt  sdkconfig.defaults
firmware/scripts/: patch_net80211.py
firmware/spectrum-analyzer/: CMakeLists.txt  sdkconfig.defaults
firmware/tw32_common/: CMakeLists.txt  idf_component.yml
firmware/tw32_common/include/: tw32_ap_security.h  tw32_cdc_cli.h  tw32_io.h  tw32_json_out.h  tw32_led.h  tw32_nvs_kv.h  tw32_wifi_scan.h
firmware/tw32_common/src/: tw32_ap_security.c  tw32_cdc_cli.c  tw32_io.c  tw32_json_out.c  tw32_led.c  tw32_nvs_kv.c  tw32_wifi_scan.c
firmware/usb-hid-keyboard/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/wifi-beacon-spam/: CMakeLists.txt  sdkconfig.defaults
firmware/wifi-bssid-clone/: CMakeLists.txt  sdkconfig.defaults
firmware/wifi-clock-skew/: CMakeLists.txt  sdkconfig.defaults
playbooks/: ble-recon.txt  deauth-first.txt  evil-twin-wpa2.txt  handshake-capture.txt  recon.txt  spectrum-quick.txt
scripts/: build.sh  gui_screenshot.py  hw_smoke.py  json_coherence.py  sweep_json.sh
src/thewave32/: builder.py  (+12 more)
(+137 files in other folders)
