[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thewave32"
version = "0.2.0"
description = "Plug-and-play ESP32-S3 firmware module flasher with native GUI"
requires-python = ">=3.11"
authors = [{ name = "v0rtex" }]
dependencies = [
  "pydantic>=2.6",
  "esptool>=4.7",
  "pyserial>=3.5",
  "PySide6>=6.6",
  "pyqtgraph>=0.13",
  "numpy>=1.24",
  "pandas>=2.1",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.12",
]

[project.scripts]
thewave32 = "thewave32.cli:main"
thewave32-gui = "thewave32.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/thewave32"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "hardware: requires an ESP32-S3 connected over UART (opt-in via --hardware)",
]
